--- a/src/create_account_4.html
+++ b/src/create_account_4.html
@@ -32,10 +32,10 @@
         </section>
 
         <section class="flex pt-20 flex-col justify-end items-center gap-5 grow shrink-0 self-stretch">
-            <button
+            <a href="../src/home_feed.html"
                 class="flex w-full bg-neutral-50 py-3 px-6 justify-center items-center gap-2.5 shadow-3xl backdrop-blur-23 rounded-65 opacity-50">
                 <section class="text-center font-inter text-base font-bold">Next</section>
-            </button>
+            </a >
         </section>
 
     </article>
