--- a/src/user_profile_1.html
+++ b/src/user_profile_1.html
@@ -13,10 +13,11 @@
     <img src="../public/images/mine.jpg" alt=""
         class="w-[68px] h-[68px] shrink-0 rounded-200 border-4 border-solid border-neutral-1000 absolute top-28 left-2">
     <section class="flex flex-row items-end justify-end mt-2">
-        <button
+        <!-- Edit profile button -->
+        <a href="../src/edit_profile.html"
             class="inline-flex py-2 px-[20px] justify-center items-center gap-2.5 rounded-30 border border-solid border-stroke shadow-3xl">
-            <section class="font-inter font-medium text-[16px] text-neutral-50">Edit profile</section>
-        </button>
+            <section class="font-inter font-medium text-16 text-neutral-50">Edit profile</section>
+    </a>
     </section>
 
     <section class="flex w-full flex-col justify-end items-start gap-4 pl-[20px] pr-4">
@@ -25,12 +26,236 @@
             <h2 class="text-15 font-normal text-neutral-500 ">@KrutantSinh</h2>
         </section>
 
-        <section class="text-neutral-50 text-[16px] font-">
+        <section class="text-neutral-50 text-16 font-normal">
             <p>Final year ECE student 🎓 | Coding enthusiast 💻 | Future Fullstack Developer 🚀 | Gamer 🎮 | Anime lover 🌸 | Embracing the world of tech</p>
         </section>
-
+        <section class="flex items-start gap-5">
+            <section class="flex">
+            <img src="../public/images/link-icon.svg" alt="link">
+            <h2 class="text-twitterblue text-16 font-normal pl-1">pixsellez.io</h2>
+        </section>
+        <section class="flex ">
+            <img src="../public/images/calendar-icon.svg" alt="calender">
+            <h2 class="text-neutral-500 text-16 font-normal pl-1">Joined September 2018</h2>
+        </section>
+        </section>
+        <section class="flex items-end gap-5">
+            <section class="flex">
+                <h1 class="text-neutral-50 text-16 font-medium ">217</h1>
+                <h2 class="text-neutral-500 text-16 font-normal pl-1">Following</h2>
+            </section>
+            <section class="flex">
+                <h1 class="text-neutral-50 text-16 font-medium ">118</h1>
+                <h2 class="text-neutral-500 text-16 font-normal pl-1">Followers</h2>
+            </section>
+        </section>
     </section>
+    
+    <article class="flex py-2 px-4 items-start gap-4 self-stretch border-b border-solid border-neutral-700 mt-1">
+        <section>
+            <img src="../public/images/mine.jpg" alt="me" class="w-12 h-12 rounded-200">
+        </section>
+        <section class="flex flex-col items-start gap-2 grow shrink-0 basis-0">
+            <section class="flex flex-row items-start gap-1 self-stretch">
+                <h1 class="text-base font-medium text-neutral-50">Krutant Sinh</h1>
+                <p class="text-neutral-500 text-base font-normal">@KrutantSinh • 32m</p>
+            </section>
+            <section>
+                <p class="text-15 font-normal text-neutral-50">Your potential is endless. Don't limit your
+                    challenges; challenge your limits. </p>
+            </section>
 
+            <!-- interaction bar -->
+
+            <section class="flex py-3 justify-between items-center self-stretch">
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/comment.svg" alt="comment">
+                    <p class="text-neutral-500 text-14 font-normal">287</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/retweet.svg" alt="retweet">
+                    <p class="text-neutral-500 text-14 font-normal">257</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/heart.svg" alt="heart">
+                    <p class="text-neutral-500 text-14 font-normal">2,287</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/insights.svg" alt="insights">
+                    <p class="text-neutral-500 text-14 font-normal">28.2k</p>
+                </section>
+                <section class="flex justify-center items-center self-stretch">
+                    <img src="../public/images/share.svg" alt="share">
+                </section>
+            </section>
+        </section>
+    </article>
+
+    <article class="flex py-2 px-4 items-start gap-4 self-stretch border-b border-solid border-neutral-700">
+        <section>
+            <img src="../public/images/avatar_2.png" alt="me" class="w-12 h-12 rounded-200">
+        </section>
+        <section class="flex flex-col items-start gap-2 grow shrink-0 basis-0">
+            <section class="flex flex-row items-start gap-1 self-stretch">
+                <h1 class="text-base font-medium text-neutral-50">Name</h1>
+                <p class="text-neutral-500 text-base font-normal">@handle • 54m</p>
+            </section>
+            <section>
+                <p class="text-15 font-normal text-neutral-50">Don't wish for it, work for it. </p>
+            </section>
+
+            <!-- interaction bar -->
+
+            <section class="flex py-3 justify-between items-center self-stretch">
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/comment.svg" alt="comment">
+                    <p class="text-neutral-500 text-14 font-normal">11</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/retweet.svg" alt="retweet">
+                    <p class="text-neutral-500 text-14 font-normal">270</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/heart.svg" alt="heart">
+                    <p class="text-neutral-500 text-14 font-normal">1869</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/insights.svg" alt="insights">
+                    <p class="text-neutral-500 text-14 font-normal">99.6k</p>
+                </section>
+                <section class="flex justify-center items-center self-stretch">
+                    <img src="../public/images/share.svg" alt="share">
+                </section>
+            </section>
+        </section>
+    </article>
+
+    <article class="flex py-2 px-4 items-start gap-4 self-stretch border-b border-solid border-neutral-700">
+        <section>
+            <img src="../public/images/avatar_3.png" alt="me" class="w-12 h-12 rounded-200">
+        </section>
+        <section class="flex flex-col items-start gap-2 grow shrink-0 basis-0">
+            <section class="flex flex-row items-start gap-1 self-stretch">
+                <h1 class="text-base font-medium text-neutral-50">Name</h1>
+                <p class="text-neutral-500 text-base font-normal">@handle • 10h</p>
+            </section>
+            <section>
+                <p class="text-15 font-normal text-neutral-50">i've seen people absolutely despise auto layout in
+                    figma but i think it's a lifesaver- <br> 1. tidies everything nice and compact<br>2. makes
+                    responsive design effortless<br>3. no manual adjustments post any tweaks<br>4. saves a tonnn of
+                    time <br><br> sorry, but will stay an auto layout maxi all life.</p>
+            </section>
+
+            <!-- interaction bar -->
+
+            <section class="flex py-3 justify-between items-center self-stretch">
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/comment.svg" alt="comment">
+                    <p class="text-neutral-500 text-14 font-normal">11</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/retweet.svg" alt="retweet">
+                    <p class="text-neutral-500 text-14 font-normal">270</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/heart.svg" alt="heart">
+                    <p class="text-neutral-500 text-14 font-normal">1869</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/insights.svg" alt="insights">
+                    <p class="text-neutral-500 text-14 font-normal">99.6k</p>
+                </section>
+                <section class="flex justify-center items-center self-stretch">
+                    <img src="../public/images/share.svg" alt="share">
+                </section>
+            </section>
+        </section>
+    </article>
+
+    <article class="flex py-2 px-4 items-start gap-4 self-stretch border-b border-solid border-neutral-700">
+        <section>
+            <img src="../public/images/avatar_4.png" alt="me" class="w-12 h-12 rounded-200">
+        </section>
+        <section class="flex flex-col items-start gap-2 grow shrink-0 basis-0">
+            <section class="flex flex-row items-start gap-1 self-stretch">
+                <h1 class="text-base font-medium text-neutral-50">Name</h1>
+                <p class="text-neutral-500 text-base font-normal">@handle • 10h</p>
+            </section>
+            <section>
+                <p class="text-15 font-normal text-neutral-50">Writing gets easier after the first
+                    sentence.<br><br>Lifting gets easier after the first set.<br><br>People think and think and
+                    think until they finally decide to act. Their attention shifts from internal to external, and
+                    the difficulty they created in their mind vanishes.</p>
+            </section>
+
+            <!-- interaction bar -->
+
+            <section class="flex py-3 justify-between items-center self-stretch">
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/comment.svg" alt="comment">
+                    <p class="text-neutral-500 text-14 font-normal">11</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/retweet.svg" alt="retweet">
+                    <p class="text-neutral-500 text-14 font-normal">270</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/heart.svg" alt="heart">
+                    <p class="text-neutral-500 text-14 font-normal">1869</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/insights.svg" alt="insights">
+                    <p class="text-neutral-500 text-14 font-normal">99.6k</p>
+                </section>
+                <section class="flex justify-center items-center self-stretch">
+                    <img src="../public/images/share.svg" alt="share">
+                </section>
+            </section>
+        </section>
+    </article>
+
+    <article class="flex py-2 px-4 items-start gap-4 self-stretch border-b border-solid border-neutral-700">
+        <section>
+            <img src="../public/images/avatar_1.png" alt="me" class="w-12 h-12 rounded-200">
+        </section>
+        <section class="flex flex-col items-start gap-2 grow shrink-0 basis-0">
+            <section class="flex flex-row items-start gap-1 self-stretch">
+                <h1 class="text-base font-medium text-neutral-50">Name</h1>
+                <p class="text-neutral-500 text-base font-normal">@handle • 10h</p>
+            </section>
+            <section>
+                <p class="text-15 font-normal text-neutral-50">Ahh! I see You have reached quite far....</p>
+            </section>
+
+            <!-- interaction bar -->
+
+            <section class="flex py-3 justify-between items-center self-stretch">
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/comment.svg" alt="comment">
+                    <p class="text-neutral-500 text-14 font-normal">11</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/retweet.svg" alt="retweet">
+                    <p class="text-neutral-500 text-14 font-normal">270</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/heart.svg" alt="heart">
+                    <p class="text-neutral-500 text-14 font-normal">1869</p>
+                </section>
+                <section class="flex justify-center items-center gap-[5px]">
+                    <img src="../public/images/insights.svg" alt="insights">
+                    <p class="text-neutral-500 text-14 font-normal">99.6k</p>
+                </section>
+                <section class="flex justify-center items-center self-stretch">
+                    <img src="../public/images/share.svg" alt="share">
+                </section>
+            </section>
+        </section>
+
+        <a href="../src/compose_tweet.html" class="inline-flex fixed bottom-0 right-0 mb-16 mr-3 p-4 items-start gap-[10px] rounded-[32px] bg-twitterblue shadow-3xl">
+            <img src="../public/images/plus.svg" alt="+" class="flex w-8 h-8 justify-center items-center">
+        </a>
+    </article>
 </body>
 
 </html>
