--- a/src/create_account_1.html
+++ b/src/create_account_1.html
@@ -21,7 +21,7 @@
             <section class="flex flex-col items-center gap-8 self-stretch">
                 <section class="relative w-full">
                     <input type="text" id="Label" placeholder="Name"
-                        class="w-full py-4 px-3 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000  placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
+                        class="w-full py-4 px-3 h-14 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000  placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
                         autocomplete="off">
                     <label for="Label"
                         class="absolute left-3 text-neutral-500 cursor-text invisible peer-focus:visible peer-focus:text-12 peer-focus:-top-3 peer-focus:px-1 bg-neutral-1000 peer-focus:text-twitterblue transition duration-300">Name</label>
@@ -29,7 +29,7 @@
 
                 <section class="relative w-full">
                     <input type="text" id="Label" placeholder="Email"
-                        class="w-full py-4 px-3 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000 outline-neutral-500 placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
+                        class="w-full py-4 px-3 h-14 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000 outline-neutral-500 placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
                         autocomplete="off">
                     <label for="Label"
                         class="absolute left-3 text-neutral-500 cursor-text invisible peer-focus:visible peer-focus:text-12 peer-focus:-top-3 peer-focus:px-1 bg-neutral-1000 peer-focus:text-twitterblue transition duration-300">Email</label>
@@ -51,7 +51,7 @@
             </section>
             <section class="w-full flex flex-col justify-end absolute bottom-5 left-0 right-0">
                 <a href="../src/create_account_2.html"
-                    class="flex w-full py-2 px-5 justify-center items-center gap-2.5 rounded-65 shadow-3xl backdrop-blur-2 bg-neutral-200 opacity-50 ">
+                    class="flex w-full py-2 px-5 h-14 justify-center items-center gap-2.5 rounded-65 shadow-3xl backdrop-blur-2 bg-neutral-200 opacity-50 ">
                     <section class="text-neutral-1000 text-center font-inter text-base font-bold">Create account
                     </section>
                 </a>
