--- a/src/create_account_2.html
+++ b/src/create_account_2.html
@@ -20,7 +20,7 @@
 
             <section class="relative w-full mb-8">
                 <input type="text" id="Label" placeholder="Name"
-                    class="w-full py-4 px-3 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000 placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
+                    class="w-full py-4 px-3 h-14 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000 placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
                     autocomplete="off">
                 <img src="../public/images/tick.svg" alt="tick"
                     class="absolute inset-y-4 end-0 pr-2 invisible peer-focus:visible ">
@@ -30,7 +30,7 @@
 
             <section class="relative w-full mb-8">
                 <input type="text" id="Label" placeholder="Email"
-                    class="w-full py-4 px-3 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000 placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
+                    class="w-full py-4 px-3 h-14 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000 placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
                     autocomplete="off">
                 <img src="../public/images/tick.svg" alt="tick"
                     class="absolute inset-y-4 end-0 pr-2 invisible peer-focus:visible ">
@@ -40,7 +40,7 @@
 
             <section class="relative w-full mb-3">
                 <input type="date" id="Label" placeholder="Date of birth"
-                    class="w-full py-4 px-3 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000 placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
+                    class="w-full py-4 px-3 h-14 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000 placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
                     autocomplete="off">
                 <label for="Label"
                     class="absolute left-3 text-neutral-500 cursor-text invisible peer-focus:visible peer-focus:text-12 peer-focus:-top-3 peer-focus:px-1 bg-neutral-1000 peer-focus:text-twitterblue transition duration-300">Date
