--- a/src/create_account_3.html
+++ b/src/create_account_3.html
@@ -23,7 +23,7 @@
             </section>
             <section class="relative w-full">
                 <input type="text" id="Label" placeholder="Verification code"
-                    class="w-full py-4 px-3 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000 placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
+                    class="w-full py-4 px-3 h-14 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000 placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
                     autocomplete="off">
                 <img src="../public/images/tick.svg" alt="tick"
                     class="absolute inset-y-4 end-0 invisible peer-focus:visible pr-3">
