--- a/src/create_account_4.html
+++ b/src/create_account_4.html
@@ -23,7 +23,7 @@
             </section>
             <section class="relative w-full gap-3">
                 <input type="password" id="Label" placeholder="Password"
-                    class="w-full py-4 px-3 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000 placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
+                    class="w-full py-4 px-3 h-14 rounded border border-solid text-neutral-50 text-20 bg-neutral-1000 placeholder:visible placeholder:focus:invisible focus:outline-none focus:border-twitterblue transition duration-300 peer relative"
                     autocomplete="off">
                     <img src="../public/images/signup-eye.svg" alt="eye" class="absolute inset-y-4 invisible peer-focus:visible end-0 pr-3">
                 <label for="Label"
