--- a/src/user_profile_1.html
+++ b/src/user_profile_1.html
@@ -10,6 +10,7 @@
 
 <body class="w-full h-screen font-inter shrink-0 bg-neutral-1000">
     <img src="../public/images/cover_img.png" alt="" class="w-full relative">
+    <a href="../src/home_feed.html"><img src="../public/images/left_arrow.svg" alt="arrow" class="absolute top-2 left-1"></a>
     <img src="../public/images/mine.jpg" alt=""
         class="w-[68px] h-[68px] shrink-0 rounded-200 border-4 border-solid border-neutral-1000 absolute top-28 left-2">
     <section class="flex flex-row items-end justify-end mt-2">
