--- a/src/login_1.html
+++ b/src/login_1.html
@@ -41,7 +41,7 @@
         <hr class="mr-2 flex-grow border-t-2 border-neutral-700" />
       </section>
       <section class="flex flex-col items-start gap-5 self-stretch">
-        <section class="text-15 font-normal">Already have an account?</section>
+        <section class="text-15 font-normal text-neutral-50">Already have an account?</section>
         
           <a href="../src/create_account_1.html"
             class="flex gap-2.5 w-full items-center justify-center self-stretch py-2 px-6 rounded-65 shadow-3xl border border-solid border-color backdrop-blur-23">
