--- a/src/create_account_3.html
+++ b/src/create_account_3.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="font-inter">
-    <article class="flex w-full h-screen px-15 pb-[20px] flex-col items-start gap-3 shrink-0 bg-neutral-1000">
+    <article class="flex w-full min-h-screen px-15 pb-[20px] flex-col items-start gap-3 shrink-0 bg-neutral-1000">
 
         <section class="flex py-3 items-center gap-5 self-stretch">
             <img src="../public/images/cross.svg" alt="x" class="w-6 h-6">
